overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,13 @@
 html,
 body {
 	font-family: "Raleway", sans-serif;
+	height: 100%;
+	overflow: hidden;
+}
+
+#__next {
+	height: 100%;
+	overflow: hidden;
 }
 
 a {
@@ -61,7 +68,7 @@ a {
 	}
 
 	.layout {
-		overflow: initial;
+		overflow: auto;
 		width: calc(100% - 70px); /* based on the width of socials*/
 	}
 
